# tool_youtube_auto_donwloader

./: .gitignore  README.md  config.example.yaml  log.txt  pyproject.toml  urls.example.txt
src/tool_youtube_auto_downloader/: __init__.py  main.py  pull_yt.py
